--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -1,4 +1,4 @@
-<a href="#" title="Edit decklist name / description" id="decklist-edit" class="btn btn-sm btn-default" style="display:none">
+<a href="{{ path('decklist_edit', {decklist_id:decklist.id}) }}" title="Edit decklist name / description" id="decklist-edit" class="btn btn-sm btn-default" style="display:none">
 	<span class="fa fa-pencil text-primary"></span> Edit
 </a>
 <a href="#" title="Delete decklist" id="decklist-delete" class="btn btn-sm btn-default" style="display:none">
