--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -6,14 +6,15 @@
 	<script src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 	<script type="text/javascript">
-	app.deck.json = {{ arrayexport|json_encode|raw }};
+	app.deck && app.deck.init({{ deck|json_encode|raw }});
+	app.deck_history && app.deck_history.init({{ deck.history|json_encode|raw }});
 	</script>
 {% endblock %}
 
 {% block body %}
 <div class="main white container">
 
-{% if arrayexport.unsaved %}
+{% if deck.isUnsaved %}
 <div class="alert alert-danger" role="alert" id="deck-unsaved-alert"><span class="fa fa-exclamation-triangle"></span> This deck has unsaved changes. Please save the deck or cancel the changes before making further edits.</div>
 {% endif %}
 
