removed images from decklist view + fix bug on decklist edit

--- a/src/AppBundle/Resources/views/Decklist/decklist_edit.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist_edit.html.twig
@@ -25,7 +25,7 @@
 					<select class="form-control" name="tournament" id="tournament">
 						<option value="">No</option>
 						{% for tournament in tournaments %}
-						<option value="{{ tournament.id }}"{% if tournament.id == decklist.tournament.id %} selected{% endif %}>{{ tournament.description }}</option>
+						<option value="{{ tournament.id }}"{% if decklist.tournament and tournament.id == decklist.tournament.id %} selected{% endif %}>{{ tournament.description }}</option>
 						{% endfor %}
 					</select>
 				</div>
