added user icon in decklist page

--- a/src/AppBundle/Resources/views/Decklist/author-and-description.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/author-and-description.html.twig
@@ -1,4 +1,5 @@
 <h3 class="username">
+	<span class="fa fa-user"></span>
     {{ macros.username(decklist.user) }}
 </h3>
 <div id="deck-description">{{ decklist.descriptionHtml|raw }}</div>
