--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -6,14 +6,6 @@
 <a class="card-tip" data-code="{{ card.code }}">{{ card.name }} <i>({{ card.pack.name }})</i></a>
 {% endmacro %}
 
-{% macro username_with_reputation(user) %}
-<span class="username">
-    <a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}" class="{{ user.color }}">{{ user.username }}</a>
-    {% if user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
-    <small class="reputation">{{ user.reputation }}</small>
-</span>
-{% endmacro %}
-
 {% macro decklist_table_row(decklist) %}
 <tr>
 	<td class="decklist-name"><a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }}</a></td>
@@ -25,7 +17,7 @@
 {% endmacro %}
 
 {% macro username(user) %}
-<a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}" class="username {{ user.color }}">{{ user.username }}</a>
+<a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}" class="username fg-{{ user.color }}">{{ user.username }}</a>
 {% if user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
 <small title="User Reputation">{{ user.reputation }}</small>
 {% endmacro %}
