add STR column to deckbuilder ; different meaning for plot cards

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -49,7 +49,8 @@
 				<tr>
 					<th style="min-width:85px"><a href="#" data-sort="indeck">Quantity</a></th>
 					<th><a href="#" data-sort="name">Name</a></th>
-					<th class="cost"><a href="#" data-sort="cost" title="Cost">C.</a></th>
+					<th class="cost"><a href="#" data-sort="cost|income" title="Cost/Gold">C.</a></th>
+					<th class="strength"><a href="#" data-sort="strength|initiative" title="Strength/Initiative">S.</a></th>
 					<th class="type"><a href="#" data-sort="type_code" title="Type">T.</a></th>
 					<th class="faction"><a href="#" data-sort="faction_code" title="Faction">F.</a></th>
 				</tr>
