style for preview and less popups in card page

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -12,6 +12,9 @@ body {
 	font-family: 'Julius Sans One', sans-serif;
 	font-weight: 700;
 }
+.card-preview {
+	color: red;
+}
 .card-type {
 	font-weight: 700;
 }
