--- a/src/AppBundle/Resources/views/Default/about.html.twig
+++ b/src/AppBundle/Resources/views/Default/about.html.twig
@@ -7,7 +7,7 @@
 
 <h1>{{ block('title') }}</h1>
 
-<p>This website is dedicated to providing a fast, powerful and exhaustive deck builder and search engine for A Game of Thrones: The Card Game Second Edition cards, along with card descriptions and card images.</p>
+<p>This website is dedicated to providing a fast, powerful and exhaustive deck builder and search engine for {{ game_name }} cards, along with card descriptions and card images.</p>
 <p>This website is optimized for mobile browsing (WebKit).</p>
 
 <h3>Credits</h3>
@@ -18,5 +18,6 @@
     <li>The Crazy Bear-Riders for testing before release, especially mplain and alexmonk</li>
     <li><a href="http://agotgame.com/en">agotgame</a> for the idea of the color-coded type icons</li>
 </ul>
+
 </div>
 {% endblock %}
