--- a/src/AppBundle/Resources/views/Default/apiIntro.html.twig
+++ b/src/AppBundle/Resources/views/Default/apiIntro.html.twig
@@ -8,9 +8,8 @@
 <h1>{{ block('title') }}</h1>
 
 <p><tt>{{ absolute_url(path('index')) }}</tt> can be queried via an http API.</p>
-<p>This API is provided for use in deckbuilders, card databases, tournament managers, and other tools that are a complement to playing A Game of Thrones: The Card Game Second Edition.</p>
-<p>Do not use it for any project that allows for playing A Game of Thrones: The Card Game Second Edition online. FFG do not permit this. Additionally, any such project will be shut down by FFG, so probably do not attempt to make it at all.<p>
-<p>All texts are copyrighted by Fantasy Flight Games.</p>
+<p>This API is provided for use in deckbuilders, card databases, tournament managers, and other tools that are a complement to playing {{ game_name }}.</p>
+<p>All texts are copyrighted by {{ publisher_name }}.</p>
 
 <h3>Public and OAuth2</h3>
 
