--- a/src/AppBundle/Resources/views/Cycle/new.html.twig
+++ b/src/AppBundle/Resources/views/Cycle/new.html.twig
@@ -1,22 +1,13 @@
-{% extends 'AppBundle::layout.html.twig' %}
+{% extends 'AppBundle:Admin:base.html.twig' %}
 
-{% block body -%}
-<div class="main white container">
+{% block content -%}
 <h1>Cycle creation</h1>
 
     <form action="{{ path('admin_cycle_create') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
-        <p>
-            <button type="submit">Create</button>
-        </p>
+        <button type="submit" class="btn btn-success">Create</button>
+        <a href="{{ path('admin_cycle') }}" class="btn btn-default">
+         	Back to the list
+     	</a>
     </form>
-
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('admin_cycle') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
-</div>
 {% endblock %}
