--- a/src/AppBundle/Resources/views/Pack/edit.html.twig
+++ b/src/AppBundle/Resources/views/Pack/edit.html.twig
@@ -1,30 +1,20 @@
-{% extends 'AppBundle::layout.html.twig' %}
+{% extends 'AppBundle:Admin:base.html.twig' %}
 
-{% block body -%}
-<div class="main white container">
+{% block content -%}
 <h1>Pack edit</h1>
 
     <form action="{{ path('admin_pack_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
-        <p>
-            <button type="submit">Edit</button>
-        </p>
+        <button type="submit" class="btn btn-success">Edit</button>
     </form>
-
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('admin_pack') }}">
+    <br>
+        <a href="{{ path('admin_pack') }}" class="btn btn-default">
             Back to the list
         </a>
-    </li>
-    <li>
-        <form action="{{ path('admin_pack_delete', { 'id': entity.id }) }}" method="post">
+        <form action="{{ path('admin_pack_delete', { 'id': entity.id }) }}" method="post" style="display:inline-block">
             <input type="hidden" name="_method" value="DELETE" />
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
         </form>
-    </li>
-</ul>
-</div>
 {% endblock %}
