--- a/src/AppBundle/Resources/views/Pack/index.html.twig
+++ b/src/AppBundle/Resources/views/Pack/index.html.twig
@@ -1,10 +1,9 @@
-{% extends 'AppBundle::layout.html.twig' %}
+{% extends 'AppBundle:Admin:base.html.twig' %}
 
-{% block body -%}
-<div class="main white container">
+{% block content -%}
 <h1>Pack list</h1>
 
-    <table class="records_list">
+    <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -32,26 +31,15 @@
                 <td>{{ entity.cycle.name }}</td>
                 <td>{{ entity.position }}</td>
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('admin_pack_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('admin_pack_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                        <a href="{{ path('admin_pack_show', { 'id': entity.id }) }}" class="btn btn-default btn-sm">show</a>
+                        <a href="{{ path('admin_pack_edit', { 'id': entity.id }) }}" class="btn btn-default btn-sm">edit</a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('admin_pack_new') }}">
+            <a href="{{ path('admin_pack_new') }}" class="btn btn-default">
                 Create a new entry
             </a>
-        </li>
-    </ul>
-</div>
     {% endblock %}
