--- a/src/AppBundle/Resources/views/Pack/new.html.twig
+++ b/src/AppBundle/Resources/views/Pack/new.html.twig
@@ -1,22 +1,13 @@
-{% extends 'AppBundle::layout.html.twig' %}
+{% extends 'AppBundle:Admin:base.html.twig' %}
 
-{% block body -%}
-<div class="main white container">
+{% block content -%}
 <h1>Pack creation</h1>
 
     <form action="{{ path('admin_pack_create') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
-        <p>
-            <button type="submit">Create</button>
-        </p>
-    </form>
-
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('admin_pack') }}">
+        <button type="submit" class="btn btn-success">Create</button>
+        <a href="{{ path('admin_pack') }}" class="btn btn-default">
             Back to the list
         </a>
-    </li>
-</ul>
-</div>
+    </form>
 {% endblock %}
