--- a/src/AppBundle/Resources/views/Tournament/edit.html.twig
+++ b/src/AppBundle/Resources/views/Tournament/edit.html.twig
@@ -1,18 +1,20 @@
-{% extends 'AppBundle::layout.html.twig' %}
+{% extends 'AppBundle:Admin:base.html.twig' %}
 
-{% block body -%}
-<div class="main white container">
+{% block content -%}
 <h1>Tournament edit</h1>
 
-    {{ form(edit_form) }}
-
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('admin_tournament') }}">
+    <form action="{{ path('admin_tournament_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+        <input type="hidden" name="_method" value="PUT" />
+        {{ form_widget(edit_form) }}
+            <button type="submit" class="btn btn-success">Edit</button>
+    </form>
+    <br>
+        <a href="{{ path('admin_tournament') }}" class="btn btn-default">
             Back to the list
         </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
-</div>
+    <form action="{{ path('admin_tournament_delete', { 'id': entity.id }) }}" method="post" style="display:inline-block">
+            <input type="hidden" name="_method" value="DELETE" />
+            {{ form_widget(delete_form) }}
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
 {% endblock %}
