items in admin panel

--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -3,5 +3,14 @@
 {% block body %}
 <div class="main admin container">
 <h1>Admin Panel</h1>
+<h2>Game data management</h2>
+<ul>
+<li><a href="{{ path('admin_type') }}">Type list</a></li>
+<li><a href="{{ path('admin_faction') }}">Faction list</a></li>
+<li><a href="{{ path('admin_cycle') }}">Cycle list</a></li>
+<li><a href="{{ path('admin_pack') }}">Pack list</a></li>
+<li><a href="{{ path('admin_card') }}">Card list</a></li>
+<li><a href="{{ path('admin_tournament') }}">Tournament list</a></li>
+</ul>
 </div>
 {% endblock %}
