small fixes / improvements

--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -12,5 +12,10 @@
 <li><a href="{{ path('admin_card') }}">Card list</a></li>
 <li><a href="{{ path('admin_tournament') }}">Tournament list</a></li>
 </ul>
+<h2>Excel card data file</h2>
+<ul>
+<li><a href="{{ path('excel_download_form') }}">Download a file</a></li>
+<li><a href="{{ path('excel_upload_form') }}">Upload a file</a></li>
+</ul>
 </div>
 {% endblock %}
