chart in deck view and other fixes

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -67,6 +67,7 @@
 			</div>
 			<!-- Description -->
 
+			{% include 'AppBundle:Builder:deck-charts.html.twig' %}
 			{% include 'AppBundle:Builder:draw-simulator.html.twig' %}
 
 			<!-- Published decklists Table -->
