add image upload in admin

--- a/src/AppBundle/Resources/views/Card/show.html.twig
+++ b/src/AppBundle/Resources/views/Card/show.html.twig
@@ -33,6 +33,10 @@
                 <th>Text</th>
                 <td>{{ entity.text }}</td>
             </tr>
+            <tr>
+                <th>Image</th>
+                <td><img src="{{ asset('/bundles/cards/' ~ entity.code ~ '.png') }}"></td>
+            </tr>
         </tbody>
     </table>
 
