change code from nightswatch to thenightswatch

--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -41,7 +41,7 @@
 .icon-military:before {
 	content: "\e605";
 }
-.icon-nightswatch:before {
+.icon-thenightswatch:before {
 	content: "\e606";
 }
 .icon-power:before {
