--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -335,7 +335,7 @@ div.site-slogan {
 	background-color: #509f16;
 	color: white;
 }
-.bg-nightswatch {
+.bg-thenightswatch {
 	background-color: #7a7a7a;
 }
 .bg-martell {
@@ -363,7 +363,7 @@ div.site-slogan {
 .fg-tyrell {
 	color: #509f16;
 }
-.fg-nightswatch {
+.fg-thenightswatch {
 	color: #7a7a7a;
 }
 .fg-martell {
