--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -40,7 +40,7 @@
 					<button type="button" id="btn-delete" class="btn btn-danger"><span class="fa fa-trash"></span> Delete</button>
 					{% endif %}
 					<a href="{{ path('deck_clone', {deck_id:deck_id}) }}" id="btn-clone" class="btn btn-info"><span class="fa fa-clone"></span> Clone</a>
-					{#    <button type="button" id="btn-print" class="btn btn-default"><span class="fa fa-print"></span> Print</button>#}
+					<button type="button" id="btn-print" class="btn btn-default"><span class="fa fa-print"></span> Print</button>
 					<div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 							<span class="fa fa-download"></span> Download <span class="caret"></span>
