--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -37,6 +37,8 @@
 			<span class="fa fa-check-square-o"></span> With Selection <span class="caret"></span>
 		</button>
 		<ul class="dropdown-menu" role="menu">
+			<li class="dropdown-header"><span class="fa fa-exchange"></span> Compare</li>
+		    <li><a href="#" id="btn-compare">Compare two decks</a></li>
 		    <li class="dropdown-header"><span class="fa fa-tag"></span> Tags</li>
 		    <li><a href="#" id="btn-tag-add">Add one or more tags</a></li>
 			<li><a href="#" id="btn-tag-remove-one">Remove one or more tags</a></li>
